# k_watch_firmware

./: README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/cmake/: lvgl_image.cmake
app/hal/: ancs_client.h
app/src/: ancs_client.c  ancs_client.h  app.c  app.cpp  app.h  app.hpp  batt.txt  battery_model.inc  ble.c  buttons.c  buttons.h  cts_client.c  cts_client.h  display.c  display.h  event.c  event.h  image_176x176_4bpp.c  image_176x176_4bpp.h  led.c  led.h  main.c  main.cpp  power.c  power.h  rtc.c  rtc.h  ui.c  ui.h  watchface.c  watchface.h
app/src/app/: model.c  model.cpp  model.h  model.hpp  modes.c  modes.cpp  modes.h  modes.hpp  screen.h  screen.hpp
app/src/app/screens/: noti_screen.c  noti_screen.cpp  noti_screen.h  noti_screen.hpp  watchface_screen.c  watchface_screen.cpp  watchface_screen.h  watchface_screen.hpp
app/src/driver/: LPM013M126A.c  LPM013M126A.h
app/src/hal/: ancs_client.c  ancs_client.cpp  ancs_client.h  ancs_client.hpp  ble.c  ble.cpp  ble.h  ble.hpp  buttons.c  buttons.cpp  buttons.hpp  cts_client.c  cts_client.cpp  cts_client.hpp  led.c  led.cpp  led.h  led.hpp  power.c  power.cpp  power.hpp  rtc.c  rtc.cpp  rtc.h  rtc.hpp  vib.c  vib.h
app/src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
app/src/ui/components/: ui_comp_hook.c
app/src/ui/fonts/: ui_font_NotoSansCondensedMedium.c  ui_font_sevensegments.c
app/src/ui/images/: ui_img_1156340770.c  ui_img_battery_status_0_png.c  ui_img_battery_status_1_png.c  ui_img_battery_status_2_png.c  ui_img_battery_status_3_png.c  (+5 more)
(+26 files in other folders)
